crates/sakka-test/tests/trybuild/custom_encoding_wrong_sig.stderr
error[E0061]: this function takes 1 argument but 2 arguments were supplied
 --> tests/trybuild/custom_encoding_wrong_sig.rs:9:27
  |
7 | #[derive(Debug, PartialEq, Encode, Decode)]
  |                            ------ unexpected argument #1 of type `&mut Writer<__SakkaCtx>`
8 | struct WrongEncodeWithSignature {
9 |     #[sakka(encode_with = bad_encode_with)]
  |                           ^^^^^^^^^^^^^^^
  |
note: function defined here
 --> tests/trybuild/custom_encoding_wrong_sig.rs:3:4
  |
3 | fn bad_encode_with(_value: &u8) -> Result<(), Error> {
  |    ^^^^^^^^^^^^^^^
